replaces Guava with Java 11's Immutable Collections